--- a/Property FW and wreath products/Medians/biblio.bib
+++ b/Property FW and wreath products/Medians/biblio.bib
@@ -303,20 +303,21 @@ Reprint of the 1994 edition},
 	year = {2011},
 	Bdsk-Url-1 = {https://doi.org/10.1515/JGT.2010.044}}
 
-@book{Bekka2008,
-	author = {Bekka, Bachir and de la Harpe, Pierre and Valette, Alain},
-	date-added = {2020-10-31 18:22:00 +0100},
-	date-modified = {2021-01-08 10:27:38 +0100},
-	isbn = {978-0-521-88720-5},
-	mendeley-groups = {Propri{\'{e}}t{\'{e}} (T),Books,Neuchatel,Property{\_}FW{\_}and{\_}wreath{\_}product},
-	pages = {xiv+472},
-	publisher = {Cambridge University Press, Cambridge},
-	series = {New Mathematical Monographs},
-	title = {{Kazhdan's property ({\{}T{\}})}},
-	url = {https://doi.org/10.1017/CBO9780511542749},
-	volume = {11},
-	year = {2008},
-	Bdsk-Url-1 = {https://doi.org/10.1017/CBO9780511542749}}
+@book {Bekka2008,
+    AUTHOR = {Bekka, Bachir and de la Harpe, Pierre and Valette, Alain},
+     TITLE = {Kazhdan's property ({T})},
+    SERIES = {New Mathematical Monographs},
+    VOLUME = {11},
+ PUBLISHER = {Cambridge University Press, Cambridge},
+      YEAR = {2008},
+     PAGES = {xiv+472},
+      ISBN = {978-0-521-88720-5},
+   MRCLASS = {22-02 (22E40 28D15 37A15 43A07 43A35)},
+  MRNUMBER = {2415834},
+MRREVIEWER = {Markus Neuhauser},
+       DOI = {10.1017/CBO9780511542749},
+       URL = {https://doi.org/10.1017/CBO9780511542749},
+}
 
 @article{Bandelt1984,
 	abstract = {An induced subgraph G of a graph H is a retract of H if there is an edge‐preserving map f from H onto G such that f|G is the identity map on G. A median graph is a connected graph such that for any three vertices u,v and w, there exists a unique vertex x which lies simultaneously on some shortest (u,v)‐, (v,w)‐, and (w,u)‐paths. It is shown that a graph G is a retract of some hypercube if and only if G is a median graph. Copyright {\textcopyright} 1984 Wiley Periodicals, Inc., A Wiley Company},
