--- a/Property FW and wreath products/Medians/biblio.bib
+++ b/Property FW and wreath products/Medians/biblio.bib
@@ -5,6 +5,24 @@
 
 
 %% Saved with string encoding Unicode (UTF-8)
+@article {MR1663779,
+    AUTHOR = {Gerasimov, V.},
+     TITLE = {Fixed-point-free actions on cubings [translation of {\it
+              {A}lgebra, geometry, analysis and mathematical physics
+              ({R}ussian) ({N}ovosibirsk, 1996)}, 91--109, 190, {I}zdat.
+              {R}oss. {A}kad. {N}auk {S}ibirsk. {O}tdel. {I}nst. {M}at.,
+              {N}ovosibirsk, 1997; {MR}1624115 (99c:20049)]},
+   JOURNAL = {Siberian Adv. Math.},
+  FJOURNAL = {Siberian Advances in Mathematics},
+    VOLUME = {8},
+      YEAR = {1998},
+    NUMBER = {3},
+     PAGES = {36--58},
+      ISSN = {1055-1344},
+   MRCLASS = {20F32 (57M07)},
+  MRNUMBER = {1663779},
+}
+
 @article {MR3465847,
     AUTHOR = {Minasyan, Ashot},
      TITLE = {New examples of groups acting on real trees},
